style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');

body {
    height: 100vh;
    margin: 0px;

    font-family: Roboto, sans-serif;
}

button {
    background-color: #3882F6;
    border: 1px solid white;
    border-radius: 12px;
    padding: 10px;
    color: white;
}

ul {
    list-style-type: none;

    display: flex;
    gap: 1em;
}

.header {
    background-color: #1F2937;
    color: white;
    size: 18px;
    padding: 20px;

    display: flex;
    justify-content: space-between;
    align-items: center;

}

.logo {
    size: 24px;
    color: #f9faf8;
    font-weight: 800;

    display: flex;
    align-items: flex-end;

}

.header-links {
    size: 18px;
    color: #e5e7eb;
}

.main {
    color: #1F2937;
    size: 36px;
    font-weight: 800; /*extra bold*/
    
    display: flex;
    flex-direction: column;
    
}

.top-segment {
    background-color: #1F2937;
    padding: 20px;
    color: #f9faf8;
    size: 48px;
    font-weight: 800; /*extra bold*/

    display: flex;
    align-items: center;
    gap: 4em;
    justify-content: space-between;
    flex-grow: 1;
    
}

.top-image {
    max-width: 20%;

    display: flex;
    justify-content: flex-end;

}

.info-segment {
    padding: 20px;


    display: flex;
    flex-direction:row;
    justify-content: space-evenly;

}

.info-segment-title {
    text-align: center;
}

.info-card {
    padding: 20px;
    max-width: 10em;
    text-align: center;

}

.quote-segment {
    background-color: #e5e7eb;
   
    display: flex;
    flex-direction: column;
    align-items: center;
    flex-wrap: wrap;
}

.quote {
    font-size: 36px;
    font-style: italic;
    font-weight: 200;
    padding: 20px;
    max-width: 50%;
}

.quote-attribution {
    font-size: 26px;
    font-weight: bold;

    justify-content:flex-end;
    padding: 20px;
}

.ad-segment {
    background-color: white;
    color: white;
    padding: 20px;

    display: flex;
    flex-direction: row;
    justify-content: center;
}

.ad-text {
    background-color: #3882F6;
    border-radius: 10px;

    display: flex;
    flex-direction: column;
    padding: 25px;
    min-width: 50em;
    justify-content: flex-start;
}

.ad-button {
    align-self: flex-end;
    align-content: center;

}

.footer {
    background-color: #1F2937;
    color: white;
    size: 18px;
    padding: 20px;

    display: flex;
    justify-content: center;

}

